# datap4k-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: installation.md  tools-reference.md
docs/superpowers/plans/: 2026-04-07-datap4k-mcp.md
docs/superpowers/specs/: 2026-04-07-datap4k-mcp-design.md
src/: config.rs  lib.rs  main.rs  model.rs  query.rs
src/index/: cozo.rs  mod.rs  sqlite.rs
src/parser/: mod.rs  scdatatools.rs  unp4k.rs
src/server/: mod.rs  prompts.rs  resources.rs  tools.rs
tests/: cozo_test.rs  integration_test.rs  model_test.rs  parser_test.rs  query_test.rs  sqlite_test.rs
tests/fixtures/scdatatools/DataCore/libs/foundry/records/ammoparams/: bullet_ballistic_gatling_s1.json
tests/fixtures/scdatatools/DataCore/libs/foundry/records/entities/scitem/weapons/: weapongun_s1_behr_gatling.json
tests/fixtures/scdatatools/DataCore/libs/foundry/records/entities/spaceships/: aegs_avenger_titan.json
tests/fixtures/scdatatools/Extracted/Loadouts_Character_Converted/Data/Scripts/Loadouts/Character/: test_npc_01.xml
tests/fixtures/scdatatools/Extracted/SOC_Unpacked/Data/ObjectContainers/PU/test_location/: test_location.xml
