[package]
name = "datap4k-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for querying extracted Star Citizen p4k game data"
license = "MIT"
repository = "https://github.com/nzvengeance/datap4k-mcp"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
# NOTE: rusqlite (bundled) and cozo (storage-sqlite) both declare `links = "sqlite3"`,
# which Cargo forbids in the same binary. cozo will be wired in Task 6 — at that point
# we either move it to a workspace crate, use storage-rocksdb, or drop bundled rusqlite.
rusqlite = { version = "0.32", features = ["bundled", "bundled-full"] }
# cozo = { version = "0.7", features = ["storage-sqlite", "rayon"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
schemars = "0.8"
dirs = "5"
anyhow = "1"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
